Develop (#1)
* build fix remove macos windows

* develop CI

* develop CI

* develop test fix

* develop test fixes

* develop test fixes

* develop test parallel benchs

* develop testing upgrading Benchmarks, hashFile(), verify(), fromHex() module, updateDirect, JMH benchmarks

* add JMH

* add JMH

* add JMH

* add JMH

* add JMH

* adding hashmap+bench

* adding hashmap+bench fixes

* adding hashmap+bench fixes

* adding hashmap+bench fixes

* adding hashmap+bench fixes

* adding hashmap+bench fixes

* adding hashmap+bench fixes